[package]
name = "fatpigeorz_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4.17"
tokio = "1.28.0"
moka = { version = "0.11", features = ["future"] }
lazy_static = "1.4.0"
bytes = "1.4.0"
once_cell = "1.17.1"
serde = { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"
